5-th commit - logika hracov dokoncena

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /Pexeso/Hrac.class
 /Pexeso/Hrac.ctxt
 /Pexeso/package.bluej
+/Pexeso/Platno.java
+/Pexeso/Platno.class
+/Pexeso/Platno.ctxt
+/Pexeso/Platno$CanvasPane.class
+/Pexeso/Platno$PopisTvaru.class
