13-th commit - skupinova manipulacia

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,19 @@
 /Pexeso/Platno.ctxt
 /Pexeso/Platno$CanvasPane.class
 /Pexeso/Platno$PopisTvaru.class
+/Pexeso/Manazer$ManazerKlaves.class
+/Pexeso/Manazer.class
+/Pexeso/TestHernaPlocha.class
+/Pexeso/Pexeso.iml
+/Pexeso/Stvorec.java
+/Pexeso/TestHernaPlocha.java
+/Pexeso/Manazer$ManazerMysi.class
+/Pexeso/Kruh.class
+/Pexeso/Kruh.ctxt
+/Pexeso/Stvorec.class
+/Pexeso/TestHernaPlocha.ctxt
+/Pexeso/Manazer.java
+/Pexeso/Manazer.ctxt
+/Pexeso/Stvorec.ctxt
+/Pexeso/Kruh.java
+/Pexeso/Manazer$ManazerCasovaca.class
